--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/vendor/_normalize.scss" type="text/scss">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
     <main>
         <header>
-            <button class="knapp">burger</button>
+            <input type="checkbox" />
+
+            <div class="menu-checkbox">
+                <button>
+                    <span></span>
+                    <span></span> 
+                    <span></span> 
+                </button>
+    
+                <nav>
+                    <ul>
+                        <li>Hem</li>
+                        <li>Om oss</li>
+                        <li>Kontakt</li>
+                    </ul>
+                </nav>
+            </div>
+           
             <h1 class="text">
             Tough 
             <span class="desktop-only">&nbsp;</span>
