--- a/index.html
+++ b/index.html
@@ -43,13 +43,20 @@
         <div class="page-content">
             <!--page 1-->
             <div class="page page-1"> 
-                <div class="tahini">tahini drizzle</div>
-                <div>
+                <div class="logo">
                     <span class="drizzle">drizzle</span>
                     <span class="tahini">tahini</span>
                     <span class="chickpeas">chickpeas</span>
                 </div>
-                <div class="blooper">lång brödtext</div>
+                <div class="blooper">
+                    <p class="text">Main course hemp seeds Southern Italian
+                        shiitake mushrooms a delicious meal banana bread lemon
+                        tahini dressing apple vinaigrette veggie burgers cool
+                        cucumbers coconut sugar. Seasonal edame hummus asian
+                        pear kale bite sized ghost pepper one bowl mediterranian
+                        luxury bowl cayenne Thai sun pepper.
+                    </p>
+                </div>
                 <div class="image">sallads bild</div>
                 <div class="blooper-2">crispy nåt</div>
             </div>
